--- a/Histoire.html
+++ b/Histoire.html
@@ -14,7 +14,7 @@
 <div class="header">
 <h1>Histoire de L'informatique</h1>
 <p>Lorenzo Bruno 1G</p>
-<li><a href="Index.html">Accueil</a></li>
+<li><a href="index.html">Accueil</a></li>
 <li><a href="Histoire.html">Histoire</a></li>
 <li><a href="Sources.html">Sources</a></li>
 </div>
