--- a/Sources.html
+++ b/Sources.html
@@ -31,6 +31,7 @@
         <br><a href="https://www.techno-science.net/glossaire-definition/Histoire-de-l-informatique.html">https://www.techno-science.net/glossaire-definition/Histoire-de-l-informatique.html</a></br>
         <br><a href="https://www.digikey.fr/fr/articles/transistor-basics">https://www.digikey.fr/fr/articles/transistor-basics</a></br>
         <br><a href="https://history-computer.com/the-complete-guide-to-von-neumann-architecture/">https://history-computer.com/the-complete-guide-to-von-neumann-architecture/</a></br>
+	<br><a href="https://chat.openai.com/auth/login">Chat gpt/</a></br>
 
     </div>
 
